@@ -199,6 +199,16 @@ Sensible values are nil, \"news\", or \"mailto\"."
 		 )
   :group 'ffap)
 
+(defcustom ffap-prefer-remote-file nil
+  "Whether to prefer remote files in remote context.
+If non-nil, ffap always finds remote files in buffers with remote
+`default-directory'.  If nil, ffap finds local files first for absolute
+filenames in above buffers.  Relative filenames are not affected by this
+option."
+  :type 'boolean
+  :group 'ffap
+  :version "31.1")
+
 (defvar ffap-max-region-length 1024
   "Maximum active region length.
 When the region is active and larger than this value,
@@ -488,7 +498,7 @@ Returned values:
 (defvar ffap-compression-suffixes '(".gz" ".Z")	; .z is mostly dead
   "List of suffixes tried by `ffap-file-exists-string'.")
 
-(defun ffap-file-exists-string (file &optional nomodify)
+(defun ffap-file-exists-string (file &optional nomodify remote-prefix)
   ;; Early jka-compr versions modified file-exists-p to return the
   ;; filename, maybe modified by adding a suffix like ".gz".  That
   ;; broke the interface of file-exists-p, so it was later dropped.
@@ -496,23 +506,32 @@ Returned values:
   "Return FILE (maybe modified) if the file exists, else nil.
 When using jka-compr (a.k.a. `auto-compression-mode'), the returned
 name may have a suffix added from `ffap-compression-suffixes'.
-The optional NOMODIFY argument suppresses the extra search."
-  (cond
-   ((or (not file)			; quietly reject nil
-	(zerop (length file)))		; and also ""
-    nil)
-   ((file-exists-p file) file)		; try unmodified first
-   ;; three reasons to suppress search:
-   (nomodify nil)
-   ((not (rassq 'jka-compr-handler file-name-handler-alist)) nil)
-   ((member (file-name-extension file t) ffap-compression-suffixes) nil)
-   (t					; ok, do the search
-    (let ((list ffap-compression-suffixes) try ret)
-      (while list
-	(if (file-exists-p (setq try (concat file (car list))))
-	    (setq ret try list nil)
-	  (setq list (cdr list))))
-      ret))))
+The optional NOMODIFY argument suppresses the extra search.
+
+If the caller ensures that FILE is not remote, this function can accept
+an optional argument, REMOTE-PREFIX.  When REMOTE-PREFIX is non-nil (a
+string typically returned by `file-remote-p') and FILE is absolute,
+check whether FILE exists on the remote system.  If the file is present,
+the returned name uses REMOTE-PREFIX as the prefix."
+  (let ((non-essential t))
+    (cond
+     ((zerop (length file)) nil)        ; quietly reject nil and ""
+     ((and remote-prefix                ; prepend remote prefix to file
+           (file-name-absolute-p file)
+           (setq file (concat remote-prefix file))
+           nil))
+     ((file-exists-p file) file)
+     ;; three reasons to suppress search:
+     (nomodify nil)
+     ((not (rassq 'jka-compr-handler file-name-handler-alist)) nil)
+     ((member (file-name-extension file t) ffap-compression-suffixes) nil)
+     (t					; ok, do the search
+      (let ((list ffap-compression-suffixes) try ret)
+        (while list
+	  (if (file-exists-p (setq try (concat file (car list))))
+	      (setq ret try list nil)
+	    (setq list (cdr list))))
+        ret)))))
 
 (defun ffap-file-remote-p (filename)
   "If FILENAME looks remote, return it (maybe slightly improved)."
@@ -1465,6 +1484,8 @@ which may actually result in an URL rather than a filename."
 	      string))
 	 (abs (file-name-absolute-p name))
 	 (default-directory default-directory)
+         (remote-p (and ffap-prefer-remote-file
+                        (file-remote-p default-directory)))
          (oname name))
     (unwind-protect
 	(cond
@@ -1484,10 +1505,11 @@ which may actually result in an URL rather than a filename."
 	 ;; Accept remote names without actual checking (too slow):
 	 ((and abs (ffap-file-remote-p name)))
 	 ;; Ok, not remote, try the existence test even if it is absolute:
-	 ((and abs (ffap-file-exists-string name)))
+	 ((and abs (ffap-file-exists-string name nil remote-p)))
 	 ;; Try stripping off line numbers.
 	 ((and abs (string-match ":[0-9]" name)
-	       (ffap-file-exists-string (substring name 0 (match-beginning 0)))))
+	       (ffap-file-exists-string (substring name 0 (match-beginning 0))
+                                        nil remote-p)))
 	 ;; If it contains a colon, get rid of it (and return if exists)
 	 ((and (string-match path-separator name)
 	       (let ((this-name (ffap-string-at-point 'nocolon)))
@@ -1495,7 +1517,7 @@ which may actually result in an URL rather than a filename."
                  ;; the empty string.
 	         (when (> (length this-name) 0)
                    (setq name this-name)
-	           (ffap-file-exists-string name)))))
+	           (ffap-file-exists-string name nil remote-p)))))
          ;; File does not exist, try the alist:
 	 ((let ((alist ffap-alist) tem try case-fold-search)
 	    (while (and alist (not try))
@@ -1510,7 +1532,7 @@ which may actually result in an URL rather than a filename."
 		       (setq try (or
 				  (ffap-url-p try) ; not a file!
 				  (ffap-file-remote-p try)
-				  (ffap-file-exists-string try))))))
+				  (ffap-file-exists-string try nil remote-p))))))
 	    try))
          ;; Try adding a leading "/" (common omission in ftp file names).
          ;; Note that this uses oname, which still has any colon part.
@@ -1543,17 +1565,18 @@ which may actually result in an URL rather than a filename."
 	       (string-match ffap-dired-wildcards name)
 	       abs
 	       (ffap-file-exists-string (file-name-directory
-					 (directory-file-name name)))
+					 (directory-file-name name))
+                                        nil remote-p)
 	       name))
          ;; Try all parent directories by deleting the trailing directory
          ;; name until existing directory is found or name stops changing
          ((let ((dir name))
             (while (and dir
-                        (not (ffap-file-exists-string dir))
+                        (not (ffap-file-exists-string dir nil remote-p))
                         (not (equal dir (setq dir (file-name-directory
                                                    (directory-file-name dir)))))))
             (and (not (string= dir "/"))
-		 (ffap-file-exists-string dir))))
+		 (ffap-file-exists-string dir nil remote-p))))
 	 )
       (set-match-data data))))
 
